# UAVOnboardController

./: .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  README.md
Core/: CMakeLists.txt  ErrorHandle.h  ILogger.h  Time.cpp  Time.h
Core/Control/: PIDController.cpp  PIDController.h  PIDControllerVector3.hpp
Core/Data/: Recorder.h  StreamBinder.h  StreamNode.h  StreamPart.cpp  StreamPart.h
Core/Math/: AngleConvert.cpp  AngleConvert.h  ColorConvert.cpp  ColorConvert.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h
Core/Network/: IPackage.h  PackageClient.h  PackageServer.h  UDPClient.cpp  UDPClient.h  UDPServer.cpp  UDPServer.h
Core/Thread/: AsyncProcess.cpp  AsyncProcess.h  AtomicMethod.hpp  AutoAwaitStopSignal.h  AwaitStopSignal.cpp  AwaitStopSignal.h  IFilter.h  IObservable.h  IObserver.h  IRunning.h  NotifyPipe.hpp  Pipe.h  Utils.cpp  Utils.h
Devices/: CMakeLists.txt
Devices/BMP180/: BMP180Barometer.cpp  BMP180Barometer.h  BarometerData.h
Devices/Camera/: CameraCapture.cpp  CameraCapture.h
Devices/Filter/: AccelerometerFilter.cpp  AccelerometerFilter.h  C2ComplementerFilter.cpp  C2ComplementerFilter.h  CalibratedFilter.h  GyroscopeFilter.cpp  GyroscopeFilter.h  KalmanFilter.cpp  KalmanFilter.h  KalmanFilterVector3.hpp  MagnetometerFilter.cpp  MagnetometerFilter.h  TimedVector3.h
Devices/HCSR04/: HCSR04Rangefinder.cpp  HCSR04Rangefinder.h
Devices/L3GD20H/: L3GD20HGyroscope.cpp  L3GD20HGyroscope.h
Devices/LSM303D/: LSM303DAccelerometer.cpp  LSM303DAccelerometer.h  LSM303DMagnetometer.cpp  LSM303DMagnetometer.h
Devices/PCA9685/: PCA9685.cpp  PCA9685.h  PCA9685PwmController.cpp  PCA9685PwmController.h
Test/: CMakeLists.txt  test.cpp
UAV/: AircraftApp.cpp  AircraftApp.h  Config.h  ConnectionHandler.cpp  ConnectionHandler.h  DeviceHandler.cpp  DeviceHandler.h  InputRecorder.h  Logger.cpp  Logger.h  Pilot.cpp  Pilot.h  SensorReferenceSystemA.cpp  SensorReferenceSystemA.h  SensorReferenceSystemB.cpp  SensorReferenceSystemB.h
UAV/Aircrafts/: IAircraft.h  Quadrocopter.cpp  Quadrocopter.h
UAV/Interact/: Accelerometer.cpp  Accelerometer.h  Barometer.cpp  Barometer.h  Gyroscope.cpp  Gyroscope.h  Magnetometer.cpp  Magnetometer.h  PulseWidthModulator.cpp  PulseWidthModulator.h
UAV/Structures/: AngularControlTrust.h  PulseWidthSet.cpp  PulseWidthSet.h  RemoteCameraOut.h  RemoteIn.h  RemoteOut.h
